--- a/Capstone-Project-Loan-Calculator-/index.html
+++ b/Capstone-Project-Loan-Calculator-/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <title>Vite + React</title>
+    <title>HomeHarbor</title>
   </head>
   <body>
     <div id="root"></div>
